style.css
:root {
    --bg-color-light: #FFF;
    --text-color-dark: #010101;
    --bg-color-muted: #DDDDDD;
}

.movie-poster {

    margin: 0 !important;
    padding: 0 !important;
    max-width: 100%;
    height: auto;
    min-height: 200px;
    max-height: 250px;
    object-fit: cover;
}

.movie-container {
    width: 20vw;
    position: relative;
    padding: 0;
    background-color: var(--bg-color-light);
}

.card-body {

}
.card-text {
    display: none;
}

.movie-container-bg-img {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: 0;
    padding: 0;
    /* stuff for showing image when focused */
    background-repeat: no-repeat !important;
    background-position: center !important; /* Center the image */
    background-size: cover !important; /* Resize the background image to cover the entire container */
    z-index: -1;
}

/* movie card controls (edit/delete) are invisible until the card is hovered over */
.card-footer {
    background-color: var(--bg-color-muted);
    visibility: hidden;
    position: absolute;
    border: 0 none !important;
}

